@@ -1,5 +1,10 @@
 2008-02-04  Richard Guenther  <rguenther@suse.de>
 
+	PR middle-end/33631
+	* gcc.c-torture/execute/pr33631.c: New testcase.
+
+2008-02-04  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/35043
 	* gcc.c-torture/compile/pr35043.c: New testcase.
 
