@@ -1,5 +1,11 @@
 2008-02-04  Richard Guenther  <rguenther@suse.de>
 
+	PR middle-end/33631
+	* expr.c (count_type_elements): Give for unions instead of
+	guessing.
+
+2008-02-04  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/35043
 	* gimplify.c (gimplify_init_ctor_eval): Convert array indices
 	to TYPE_DOMAINs base type instead of using bitsizetype here.
